--- a/public/js/visualize/visualize.template.html
+++ b/public/js/visualize/visualize.template.html
@@ -1,3 +1,12 @@
-<div class="visualize">
-  <h1>braaaaa</h1>
+<div id="map" class="visualize">
+
 </div>
+<script>
+    mapboxgl.accessToken = 'pk.eyJ1IjoiamFwcm9ldHQiLCJhIjoiY2ozYzV6M3Y2MDAxNTJ3bnQydDlndWE1ayJ9.bERvxZ5ou7uPxVWtO-4XKA';
+    var map = new mapboxgl.Map({
+        container: 'map',
+        center: [-94.7, 30.9],
+        style: 'mapbox://styles/japroett/cj3f4srix00022spykiebttki',
+        zoom: 5.3
+    });
+</script>
