--- a/public/js/info/info.template.html
+++ b/public/js/info/info.template.html
@@ -1,3 +1,4 @@
 <article class="info">
-  <h1>{{$ctrl.confidence}}</h1>
+  <h1 ng-bind="$ctrl.parsed"></h1>
+  <button ng-click="$ctrl.test()">asldifjhm</button>
 </article>
