--- a/public/js/visualize/visualize.template.html
+++ b/public/js/visualize/visualize.template.html
@@ -7,6 +7,7 @@
         container: 'map',
         center: [-94.7, 30.9],
         style: 'mapbox://styles/japroett/cj3f4srix00022spykiebttki',
+        // style: 'mapbox://styles/japroett/cj3f0gras007033oiasap3b19-65fjt',
         zoom: 5.3
     });
 </script>
