clean up temps for decline to submits

--- a/public/js/console/console.template.html
+++ b/public/js/console/console.template.html
@@ -12,7 +12,7 @@
         <div ng-show="!$ctrl.displayed" ng-hide="$ctrl.displayed">
             <h3>Add to database?</h3>
             <button id="yes" ng-click="$ctrl.uploadFile()">Yes</button>
-            <button id="no" ng-click="$ctrl.togglePost()">No</button>
+            <button id="no" ng-click="$ctrl.deleteFile()">No</button>
         </div>
 
         <div ng-show="!$ctrl.displayed" ng-hide="$ctrl.displayed">
