--- a/public/js/navbar/navbar.template.html
+++ b/public/js/navbar/navbar.template.html
@@ -4,5 +4,6 @@
     <li><a ui-sref="visualize">Visualize</a></li>
     <li><a ui-sref="identify">Identify</a></li>
     <li><a ui-sref="docs">Docs</a></li>
+    <li><iframe src="https://ghbtns.com/github-btn.html?user=ht44&repo=plant-id&type=star" frameborder="0" scrolling="0" width="50px" height="30px"></iframe></li>
   </ul>
 </nav>
